--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
          <a id="videobanner" class="in-page-link"></a>			
          <section class="fullscreen cover parallax image-bg overlay">
             <div class="background-image-holder">
-            	<video width="100%" autoplay>
+            	<video width="100%" autoplay muted>
             		<source src="img/video.mp4" type="video/mp4">
             		Your browser does not support the video tag.
             	</video>
