--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                   <div class="col-sm-12 text-center">
                      <img alt="logo" class="image" src="img/logo.svg" height="300">
                      <h3 class="mb16">Advisory Services</h3>
-                     <h6 class="uppercase mb32">Lorem Ipsum</h6>
+                     <!-- <h6 class="uppercase mb32">Lorem Ipsum</h6> -->
 <!--                      <div class="modal-container">
                         <div class="play-button btn-modal inline large"></div>
                         <div class="foundry_modal no-bg">
@@ -70,7 +70,7 @@
             <div class="container">
                <div class="row">
                   <div class="col-sm-12 text-center">
-                     <h4 class="uppercase mb64 mb-xs-40">WORKED WITH</h4>
+                     <h4 class="uppercase mb64 mb-xs-40">WORKED / PARTNERED WITH</h4>
                   </div>
                </div>
                <div class="row">
@@ -78,7 +78,7 @@
                      <ul class="slides">
                         <li>
                            <a href="#videobanner">
-                           <img alt="Logo" src="img/experience/RELIANCE_RETAIL.svg">
+                           <img alt="RELIANCE RETAIL" src="img/experience/RELIANCE_RETAIL.svg">
                            </a>
                         </li>
                         <li>
@@ -89,11 +89,6 @@
                         <li>
                            <a href="#videobanner">
                            <img alt="EY" src="img/experience/EY.svg">
-                           </a>
-                        </li>
-                        <li>
-                           <a href="#videobanner">
-                           <img alt="Yes Bank" src="img/experience/YES_BANK.png">
                            </a>
                         </li>
                         <li>
@@ -118,7 +113,47 @@
                         </li>
                         <li>
                            <a href="#videobanner">
+                           <img alt="PATH" src="img/experience/PATH_COMMUNITY.svg">
+                           </a>
+                        </li>
+                        <li>
+                           <a href="#videobanner">
+                           <img alt="VISTARA" src="img/experience/VISTARA.svg">
+                           </a>
+                        </li>
+                        <li>
+                           <a href="#videobanner">
+                           <img alt="BMW" src="img/experience/BMW.png">
+                           </a>
+                        </li>
+                        <li>
+                           <a href="#videobanner">
+                           <img alt="Oberoi" src="img/experience/Oberoi.svg">
+                           </a>
+                        </li>
+                        <li>
+                           <a href="#videobanner">
+                           <img alt="MMT" src="img/experience/MAKE_MY_TRIP.png">
+                           </a>
+                        </li>
+                        <li>
+                           <a href="#videobanner">
+                           <img alt="IIFL" src="img/experience/IIFL.svg">
+                           </a>
+                        </li>
+                        <li>
+                           <a href="#videobanner">
                            <img alt="Tata" src="img/experience/TATA_CLIQ.svg">
+                           </a>
+                        </li>
+                        <li>
+                           <a href="#videobanner">
+                           <img alt="Yes Bank" src="img/experience/YES_BANK.png">
+                           </a>
+                        </li>
+                        <li>
+                           <a href="#videobanner">
+                           <img alt="QUOROM" src="img/experience/QUOROM.png">
                            </a>
                         </li>
                      </ul>
@@ -139,13 +174,14 @@
                      <div class="mb40 mb-xs-24">
                         <!-- <h5 class="uppercase bold mb16">LLL<br></p> -->
                         	<p class="fade-1-4">
-                        		Manoj Adlakha, former SVP & Head International Marketing at American Express, resigned after 30 years of service. Adlakha is a CA, holds a BCom Hons from SRCC, and completed an Executive Leadership Program at Duke University. Between 2005-2009, he worked at Visa and Yes Bank. He rejoined Amex as CEO from 2014 to Q1 2022, launching premium cards and leading Amex India. Known for his strategic, customer-focused approach and strong leadership, Adlakha contributed to Amex becoming India's Most Respected Credit Brand for eight years and received personal accolades for his industry impact.
+                        		Manoj Adlakha, former SVP & Head International Marketing at American Express, resigned after 30+ years of service. Adlakha is a CA, holds a BCom Hons from SRCC, and completed an Executive Leadership Program at Duke University. Between 2005-2009, he worked at Visa and Yes Bank. He rejoined Amex as CEO from 2014 to Q1 2022, launching premium cards and leading Amex India. Known for his strategic, customer-focused approach and strong leadership, Adlakha contributed to Amex becoming India's Most Respected Credit Brand for eight years and received personal accolades for his industry impact.
                         	</p>
                      </div>
                      <div class="mb40 mb-xs-24">
                         <h5 class="uppercase bold mb16">EDUCATED AT</h5>
                         <img alt="Logo" src="img/education/duke.svg" height=50>
                         <img alt="Logo" src="img/education/srcc.png" height=50>
+                        <img alt="Logo" src="img/education/icai.png" height=50>
                      </div>
                   </div>
                   <div class="col-sm-5 col-sm-6 col-sm-offset-1 text-center">
@@ -250,24 +286,25 @@
          <section>
             <div class="container">
                <div class="row">
-                  <div class="col-sm-6">
-                     <h2 class="number">20+ years of experience. Multidisciplinary.</h2>
+                  <div class="col-sm-4">
+                     <h2 class="number">30+ years of experience. Multidisciplinary.</h2>
                      <p> 
                      	A multidisciplinary organisation that provides value add in the field of payments and digitisation; premium and luxury experiences; leadership development 
                      </p>
                   </div>
-                  <div class="col-sm-6">
-                     <h2 class="number">150+ MM Customers Served. Experienced In</h2>
+                  <div class="col-sm-4">
+                     <h2 class="number">Focus on premium and HNI’s. Experienced In</h2>
                      <p>
+
                         <p class="fade-1-4">Developing world class customer journey; building alliances and partnerships; consumer trends with focus on affluents and HNI’s ; Diversity, Equity &amp; Inclusion
                      </p>
                   </div>
-<!--                   <div class="col-sm-4">
-                     <h2>Millions of hearts touched</h2>
+                  <div class="col-sm-4">
+                     <h2>Providing leadership oversight to ~20,000 employees</h2>
                      <p>
-                        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.
+                        Guiding them towards the company's goals. He made strategic decisions, fostered a positive work environment, and set performance standards, contributing significantly to the organization's success in India.
                      </p>
-                  </div> -->
+                  </div>
                </div>
             </div>
          </section>
@@ -298,14 +335,7 @@
                      <i class="ti-package icon inline-block mb16 fade-3-4"></i>
                      <h4>Customer Trends / Affluence / Experiences<br></h4>
                      <p>
-                        In a nation with vast luxury consumption potential, we identify opportunities and craft exceptional value propositions, offering top-tier services through customers' preferred channels. We boost client value by assisting in product line strategy, upselling, cross-selling, and leveraging their customer base for growth, maximizing shareholder returns.
-                     </p>
-                  </div>
-                  <div class="col-md-5 col-sm-6 mb40 mb-xs-24">
-                     <i class="ti-infinite icon inline-block mb16 fade-3-4"></i>
-                     <h4>Diversity, Equity & Inclusion<br></h4>
-                     <p>
-                        In a nation with ample room for diverse workplace representation, we offer top-notch statistics and best practices to keep clients ahead. With COVID's impact on mental health, our experts provide personalized and group sessions addressing symptoms and solutions for employees in India and select international locations.
+                        In a nation with vast luxury consumption potential, we identify opportunities and craft exceptional value propositions, offering top-tier services through customers' preferred channels. We boost client value by assisting in product line strategy, upselling, cross-selling, and leveraging their customer base for growth, maximizing shareholder returns. Leveraging customer as a platform for growth by cross selling and upselling.
                      </p>
                   </div>
                </div>
@@ -373,13 +403,11 @@
                <div class="row">
                   <div class="col-sm-6 col-md-5">
                      <h4 class="uppercase">Get In Touch</h4>
-                     <p>
-                        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident,
-                     </p>
                      <hr>
                      <p>
-                        97 Navjeevan Vihar<br> Elwood, Victoria
-                        <br> P.O Box 3184
+                        7th Floor, 703 DLF Galeria,
+                        <br/>
+                        DLF Phase IV, Gurugram, 122002, Haryana
                      </p>
                      <hr>
                      <p>
