--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <head>
       <meta charset="utf-8">
-      <title></title>
+      <title>CardIT Advisory Services</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" media="all">
       <link href="css/themify-icons.css" rel="stylesheet" type="text/css" media="all" />
@@ -43,7 +43,7 @@
          <a id="videobanner" class="in-page-link"></a>			
          <section class="fullscreen cover parallax image-bg overlay">
             <div class="background-image-holder">
-            	<video width="100%" autoplay muted>
+            	<video style="width:100%;" autoplay muted>
             		<source src="img/video.mp4" type="video/mp4">
             		Your browser does not support the video tag.
             	</video>
