--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                      <h2 class="number">Focus on premium and HNI’s. Experienced In</h2>
                      <p>
 
-                        <p class="fade-1-4">Developing world class customer journey; building alliances and partnerships; consumer trends with focus on affluents and HNI’s ; Diversity, Equity &amp; Inclusion
+                        <p class="fade-1-4">Developing world class customer journey; building alliances and partnerships; consumer trends with focus on affluents and HNI’s
                      </p>
                   </div>
                   <div class="col-sm-4">
@@ -323,29 +323,8 @@
                      <p>
                         Facilitates dialogues with industry leaders on effective leadership and winning teams; offers decision-making tools, resilience training in turbulent times, and attrition management through individual and group sessions.
                      </p>
-                  </div>
-                  <div class="col-md-5 col-sm-6 mb40 mb-xs-24">
-                     <i class="ti-gallery icon inline-block mb16 fade-3-4"></i>
-                     <h4>Payments &amp; Digitisation<br></h4>
                      <p>
-                        In an accelerated market, we collaborate with clients eager to join the digital revolution, providing agile, cost-effective financial solutions for seamless customer experiences and high ROI.
-                     </p>
-                  </div>
-                  <div class="col-md-5 col-md-offset-1 col-sm-6 mb40 mb-xs-24">
-                     <i class="ti-package icon inline-block mb16 fade-3-4"></i>
-                     <h4>Customer Trends / Affluence / Experiences<br></h4>
-                     <p>
-                        In a nation with vast luxury consumption potential, we identify opportunities and craft exceptional value propositions, offering top-tier services through customers' preferred channels. We boost client value by assisting in product line strategy, upselling, cross-selling, and leveraging their customer base for growth, maximizing shareholder returns. Leveraging customer as a platform for growth by cross selling and upselling.
-                     </p>
-                  </div>
-               </div>
-            </div>
-         </section>
-         <a id="linkssection" class="in-page-link"></a>
-         <section class="projects">
-            <div class="container">
-               <h5>Leadership</h5>
-<a href="https://fb.watch/jo_sI457Py/?mibextid=kdkkhi">Forbes India - Attributes of a True Leader</a>
+                        <a href="https://fb.watch/jo_sI457Py/?mibextid=kdkkhi">Forbes India - Attributes of a True Leader</a>
 <a href="https://fb.watch/joVL8kApid/?mibextid=kdkkhi">Leadership Session - Harvard Alumni</a>
 <a href="https://www.facebook.com/168312979854782/posts/pfbid04GiD7NPx8oJtU6Et2y99BFRooNJ7VeX6TecSd3Y4w647kV9DAeWdwkmFwR5mwP3hl/?d=w&mibextid=kdkkhi">Outlook Business- Create a Culture of Empowerment</a>
 <a href="https://economictimes.indiatimes.com/news/company/corporate-trends/et-young-leaders-b-school-edition-ceos-share-success-secrets-in-the-leadership-masterclass/articleshow/61536054.cms">ET CEO Leadership Master Class</a>
@@ -356,9 +335,15 @@
 <a href="https://www.facebook.com/168312979854782/posts/pfbid023A4Haw47Gh3sAFeLp5mnvmiXKd3gjhzvhnwfHUkWYhn4Zgn6aAoMMbeQh4u9xZ1ql/?d=w&mibextid=kdkkhi">Business Today - Leadership Lessons</a>
 <a href="https://youtu.be/pG8Q8Jt5PdI">Leadership Mantras to FMS Alumni</a>
 <a href="https://fb.watch/jo_vmBwvoY/?mibextid=kdkkhi">Keynote Speak - Leadership Academy</a>
-<br/>
-<br/>
-<h5>Payments & Digitisation</h5>
+                     </p>
+                  </div>
+                  <div class="col-md-5 col-sm-6 mb40 mb-xs-24">
+                     <i class="ti-gallery icon inline-block mb16 fade-3-4"></i>
+                     <h4>Payments &amp; Digitisation<br></h4>
+                     <p>
+                        In an accelerated market, we collaborate with clients eager to join the digital revolution, providing agile, cost-effective financial solutions for seamless customer experiences and high ROI.
+                     </p>
+                     <p>
 <a href="https://www.fortuneindia.com/enterprise/we-are-in-a-market-that-is-on-steroids/103050">Forbes - Market on Steroids</a>
 <a href="https://youtu.be/ob2V_bBIWJA">CNBC 18 - Digital Disruption</a>
 <a href="https://youtu.be/QDD2WHchLrc">Money Matters - Payments During Covid</a>
@@ -373,9 +358,15 @@
 <a href="https://www.linkedin.com/posts/manoj-adlakha-8882331_fintech-digital-digitaltransformation-activity-6841684225352060929-8mAX?utm_source=share&utm_medium=member_ios">Fintech and Digital Payments 2021 Roundtable</a>
 <a href="https://economictimes.indiatimes.com/small-biz/security-tech/technology/now-street-hawkers-will-swipe-elite-amex-card/articleshow/57387448.cms">TOI - Tangential Merchant Acceptance Growth-Bharat QR</a>
 <a href="https://wap.business-standard.com/article-amp/companies/american-express-works-at-broadening-its-card-reach-118050201293_1.html">Building Scale & Relevance</a>
-<br/>
-<br/>
-<h5>Customer Trends / Affluence / Experiences</h5>
+                     </p>
+                  </div>
+                  <div class="col-md-5 col-md-offset-1 col-sm-6 mb40 mb-xs-24">
+                     <i class="ti-package icon inline-block mb16 fade-3-4"></i>
+                     <h4>Customer Trends / Affluence / Experiences<br></h4>
+                     <p>
+                        In a nation with vast luxury consumption potential, we identify opportunities and craft exceptional value propositions, offering top-tier services through customers' preferred channels. We boost client value by assisting in product line strategy, upselling, cross-selling, and leveraging their customer base for growth, maximizing shareholder returns. Leveraging customer as a platform for growth by cross selling and upselling.
+                     </p>
+                     <p>
 <a href="https://youtu.be/bU8eFW7DIdA">MoneyControl - Millennials Splurge in Luxury Spend</a>
 <a href="https://youtu.be/2atc_ytqUVQ">Don’t Lead Life without it</a>
 <a href="https://luxe.digital/business/digital-luxury-trends/indian-luxury-platform-luxortium/">Affluent Booming Indian Luxury Segment</a>
@@ -394,9 +385,15 @@
 <a href="https://images.app.goo.gl/yk1BdEtNdFGoQsew7">Millenniums - Premium Experiences</a>
 <a href="https://www.facebook.com/AmericanExpressIndia/photos/a.168847633134650/1902319269787469/?type=3&mibextid=kdkkhi">Launching EazyDiner Prime</a>
 <a href="https://www.facebook.com/photo.php?fbid=10158974530188696&set=a.10158407105268696&type=3&mibextid=kdkkhi">Platinum Experiences</a>
-<br/>
-<br/>
-<h5>Diversity, Equity & Inclusion</h5>
+                     </p>
+                  </div>
+<div class="col-md-5 col-sm-6 mb40 mb-xs-24">
+                     <i class="ti-infinite icon inline-block mb16 fade-3-4"></i>
+                     <h4>Diversity, Equity & Inclusion<br></h4>
+                     <p>
+                        In a nation with ample room for diverse workplace representation, we offer top-notch statistics and best practices to keep clients ahead. With COVID's impact on mental health, our experts provide personalized and group sessions addressing symptoms and solutions for employees in India and select international locations.
+                     </p>
+                     <p>
 <a href="https://www.linkedin.com/posts/manoj-adlakha-8882331_womenempowerment-sustainabledevelopment-womenatwork-activity-6907331703698792448-dwSp?utm_source=share&utm_medium=member_ios">Women Empowerment- UNDP Speaker Session</a>
 <a href="https://economictimes.indiatimes.com/industry/banking/finance/american-express-says-e-payments-growing-fast-as-women-buy-more-online/articleshow/51807474.cms">ET Interaction - Women driving Online Payments wave</a>
 <a href="https://economictimes.indiatimes.com/magazines/panache/indian-women-more-committed-to-achieving-professional-personal-ambitions-amex-survey/articleshow/74461873.cms">Breaking The Glass Ceiling</a>
@@ -405,8 +402,14 @@
 <a href="https://www.facebook.com/719808695/posts/pfbid02pXUWGDPkLSBvN8wNg8WJZfq1k5MWZKEEqpcyQBrQtHJPSC1M6qYL4WVevLB7D4n4l/?d=w&mibextid=kdkkhi">CSR - Enabling quality education to the Underserved</a>
 <a href="https://fb.watch/jslR7LCteY/?mibextid=kdkkhi">Reach Out 4.0</a>
 <a href="https://www.linkedin.com/posts/american-express_her-craft-podcast-series-activity-6770968376505446400-8NoG?utm_source=share&utm_medium=member_ios">Backing Women Empowerment</a>
-<br/>
-<br/>
+</p>
+                  </div>
+               </div>
+            </div>
+         </section>
+         <a id="linkssection" class="in-page-link"></a>
+         <section class="projects">
+            <div class="container">
 <h5>COVID Impact - Actions Taken</h5>
 <a href="https://youtu.be/QDD2WHchLrc">COVID has triggered Digitisation</a>
 <a href="https://youtu.be/P_UVfSCWlaU">MoneyControl - Covid Impact on BFSI</a>
