--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                      </p>
                   </div>
                   <div class="col-sm-4">
-                     <h2>Providing leadership oversight to ~20,000 employees</h2>
+                     <h2>Leadership oversight to ~20K employees</h2>
                      <p>
                         Guiding them towards the company's goals. He made strategic decisions, fostered a positive work environment, and set performance standards, contributing significantly to the organization's success in India.
                      </p>
@@ -405,11 +405,6 @@
 </p>
                   </div>
                </div>
-            </div>
-         </section>
-         <a id="linkssection" class="in-page-link"></a>
-         <section class="projects">
-            <div class="container">
 <h5>COVID Impact - Actions Taken</h5>
 <a href="https://youtu.be/QDD2WHchLrc">COVID has triggered Digitisation</a>
 <a href="https://youtu.be/P_UVfSCWlaU">MoneyControl - Covid Impact on BFSI</a>
@@ -450,10 +445,9 @@
 <a href="https://youtu.be/QDD2WHchLrc">On Entrepreneurship and having been One</a>
 <a href="https://www.facebook.com/1255002359/posts/pfbid08CQzFw23nYhTmos7J4ZcNxvMqwXyZKc3MRwKxtLJp8mpMbTo1XsN9koMZh28YxkXl/?d=w&mibextid=kdkkhi">Good Morning Delhi</a>
 <a href="https://www.facebook.com/719808695/posts/pfbid02yf9Js9rgvpuJqPn5J4ZDQBGJ4RXVvrr2JMi8UyGMxGHp3BAGG1huXgKPfLo2ek7pl/?d=w&mibextid=kdkkhi">An Evening on the Ramp</a>
-
-
             </div>
          </section>
+
          <a id="contactform" class="in-page-link" data-scroll-id="contactform"></a>
          <section>
             <div class="container">
