--- a/index.html
+++ b/index.html
@@ -165,10 +165,10 @@
          <section>
             <div class="container">
                <div class="row v-align-children">
-                  <iframe width="840" height="472.5" src="https://www.youtube.com/embed/n_Xi90ndXV4?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+                  <iframe width="840" height="473" src="https://www.youtube.com/embed/n_Xi90ndXV4?controls=0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
                   </iframe>
-
                </div>
+            </div>
          </section>
          <a id="aboutus" class="in-page-link"></a>
          <section>
@@ -191,6 +191,7 @@
                         <img alt="Logo" src="img/education/duke.svg" height=50>
                         <img alt="Logo" src="img/education/srcc.png" height=50>
                         <img alt="Logo" src="img/education/icai.png" height=50>
+                        <i>The Institute of Chartered Accountants of India</i>
                      </div>
                   </div>
                   <div class="col-sm-5 col-sm-6 col-sm-offset-1 text-center">
