--- a/index.html
+++ b/index.html
@@ -271,17 +271,8 @@
             <div class="container">
                <div class="row v-align-children">
                   <div class="col-md-7 col-sm-6 text-center mb-xs-24">
-                     <div class="local-video-container">
-                        <div class="background-image-holder">
-                           <img alt="Background Image" class="background-image" src="img/home3.jpg">
-                        </div>
-                        <video controls="">
-                           <source src="video/video.webm" type="video/webm">
-                           <source src="video/video.mp4" type="video/mp4">
-                           <source src="video/video.ogv" type="video/ogg">
-                        </video>
-                        <div class="play-button"></div>
-                     </div>
+                     <iframe width="560" height="315" src="https://www.youtube.com/embed/n_Xi90ndXV4?controls=0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+                  </iframe>
                   </div>
                   <div class="col-md-4 col-md-offset-1 col-sm-5 col-sm-offset-1">
                      <h3>More about the Founder</h3>
