--- a/index.html
+++ b/index.html
@@ -270,16 +270,8 @@
          <section class="bg-secondary">
             <div class="container">
                <div class="row v-align-children">
-                  <div class="col-md-7 col-sm-6 text-center mb-xs-24">
-                     <iframe width="560" height="315" src="https://www.youtube.com/embed/n_Xi90ndXV4?controls=0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
-                  </iframe>
-                  </div>
-                  <div class="col-md-4 col-md-offset-1 col-sm-5 col-sm-offset-1">
-                     <h3>More about the Founder</h3>
-                     <p>
-                     	A short explainer which goes into the CardIT thesis.
-                     </p>
-                  </div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/mMJLGA0SjIg?controls=0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+                </iframe>
                </div>
             </div>
          </section>
