--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                      <div class="mb40 mb-xs-24">
                         <!-- <h5 class="uppercase bold mb16">LLL<br></p> -->
                         	<p class="fade-1-4">
-                        		Manoj Adlakha, former SVP & Head International Marketing at American Express, resigned after 30+ years of service. Adlakha is a CA, holds a BCom Hons from SRCC, and completed an Executive Leadership Program at Duke University. Between 2005-2009, he worked at Visa and Yes Bank. He rejoined Amex as CEO from 2014 to Q1 2022, launching premium cards and leading Amex India. Known for his strategic, customer-focused approach and strong leadership, Adlakha contributed to Amex becoming India's Most Respected Credit Brand for eight years and received personal accolades for his industry impact.
+                        		Manoj Adlakha, former SVP & Head International Marketing at American Express, resigned after 30+ years of service. Adlakha is a CA, holds a BCom Hons from SRCC, and completed an Executive Leadership Program at Duke University. Between 2005-2009, he worked at Visa and Yes Bank. He rejoined Amex as CEO from 2014 to Q1 2022, launching premium cards and leading Amex India. Post this, he was apppointed International Head - Customer Marketing for American Express. Known for his strategic, customer-focused approach and strong leadership, Adlakha contributed to Amex becoming India's Most Respected Credit Brand for eight years and received personal accolades for his industry impact.
                         	</p>
                      </div>
                      <div class="mb40 mb-xs-24">
