--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>CardIT Advisory Services</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="author" content="Mohindra Fund">
+    <meta name="author" content="Manoj Adlakha">
     <meta name="description" content="A multidisciplinary organisation that provides value add in the field of payments and digitisation; premium and luxury experiences; leadership development; developing world class customer journey.">
     <meta name="keywords" content="Manoj Adlakha, CardIT, advisory services, consulting">
     <link rel="image_src" href="img/logo-original.svg">
@@ -196,7 +196,7 @@
             <iframe
               width="840"
               height="473"
-              src="https://www.youtube.com/embed/n_Xi90ndXV4?controls=0"
+              src="https://www.youtube.com/embed/n_Xi90ndXV4?controls=0&rel=0"
               title="YouTube video player"
               allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               allowfullscreen
@@ -312,7 +312,7 @@
             <iframe
               width="560"
               height="315"
-              src="https://www.youtube.com/embed/mMJLGA0SjIg?controls=0"
+              src="https://www.youtube.com/embed/mMJLGA0SjIg?controls=0&rel=0"
               title="YouTube video player"
               allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               allowfullscreen
