--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <iframe
               width="840"
               height="473"
-              src="https://www.youtube.com/embed/n_Xi90ndXV4?controls=0&rel=0"
+              src="https://www.youtube.com/embed/Awuo1qblWcc?rel=0"
               title="YouTube video player"
               allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               allowfullscreen
@@ -312,7 +312,7 @@
             <iframe
               width="560"
               height="315"
-              src="https://www.youtube.com/embed/mMJLGA0SjIg?controls=0&rel=0"
+              src="https://www.youtube.com/embed/Awuo1qblWcc?rel=0"
               title="YouTube video player"
               allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               allowfullscreen
