--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
             <iframe
               width="560"
               height="315"
-              src="https://www.youtube.com/embed/Awuo1qblWcc?rel=0"
+              src="https://www.youtube.com/embed/si47q6PNNII?rel=0"
               title="YouTube video player"
               allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               allowfullscreen
