--- a/index.html
+++ b/index.html
@@ -361,6 +361,7 @@
               <p>
                 Facilitates dialogues with industry leaders on effective leadership and winning teams; offers decision-making tools, resilience training in turbulent times, and attrition management through individual and group sessions.
               </p>
+              <h5>Links</h5>
               <p>
                 <a href="https://fb.watch/jo_sI457Py/?mibextid=kdkkhi">Forbes India - Attributes of a True Leader</a>
                 <a href="https://fb.watch/joVL8kApid/?mibextid=kdkkhi">Leadership Session - Harvard Alumni</a>
@@ -383,6 +384,7 @@
               <p>
                 In an accelerated market, we collaborate with clients eager to join the digital revolution, providing agile, cost-effective financial solutions for seamless customer experiences and high ROI.
               </p>
+              <h5>Links</h5>
               <p>
                 <a href="https://www.fortuneindia.com/enterprise/we-are-in-a-market-that-is-on-steroids/103050">Forbes - Market on Steroids</a>
                 <a href="https://youtu.be/ob2V_bBIWJA">CNBC 18 - Digital Disruption</a>
@@ -407,6 +409,7 @@
                 In a nation with vast luxury consumption potential, we identify opportunities and craft exceptional value propositions, offering top-tier services through customers' preferred channels. We boost client value by assisting in
                 product line strategy, upselling, cross-selling, and leveraging their customer base for growth, maximizing shareholder returns. Leveraging customer as a platform for growth by cross selling and upselling.
               </p>
+              <h5>Links</h5>
               <p>
                 <a href="https://youtu.be/bU8eFW7DIdA">MoneyControl - Millennials Splurge in Luxury Spend</a>
                 <a href="https://youtu.be/2atc_ytqUVQ">Don’t Lead Life without it</a>
@@ -435,6 +438,7 @@
                 In a nation with ample room for diverse workplace representation, we offer top-notch statistics and best practices to keep clients ahead. With COVID's impact on mental health, our experts provide personalized and group
                 sessions addressing symptoms and solutions for employees in India and select international locations.
               </p>
+              <h5>Links</h5>
               <p>
                 <a href="https://www.linkedin.com/posts/manoj-adlakha-8882331_womenempowerment-sustainabledevelopment-womenatwork-activity-6907331703698792448-dwSp?utm_source=share&utm_medium=member_ios">
                   Women Empowerment- UNDP Speaker Session
