move sections around

--- a/index.html
+++ b/index.html
@@ -83,68 +83,19 @@
           </div>
         </div>
       </section>
-      <a id="workedwith" class="in-page-link"></a>
+      <a id="company" class="in-page-link"></a>
       <section class="bg-secondary">
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-12 text-center">
-              <h4 class="uppercase mb64 mb-xs-40">WORKED / PARTNERED WITH</h4>
-            </div>
-          </div>
-          <div class="row">
-            <div class="logo-carousel">
-              <ul class="slides">
-                <li>
-                  <img alt="RELIANCE RETAIL" src="img/experience/RELIANCE_RETAIL.svg" />
-                </li>
-                <li>
-                  <img alt="AXP" src="img/experience/AXP.svg" />
-                </li>
-                <li>
-                  <img alt="EY" src="img/experience/EY.svg" />
-                </li>
-                <li>
-                  <img alt="DLF" src="img/experience/DLF.svg" />
-                </li>
-                <li>
-                  <img alt="CRED" src="img/experience/CRED.svg" />
-                </li>
-                <li>
-                  <img alt="Visa" src="img/experience/VISA.svg" />
-                </li>
-                <li>
-                  <img alt="TAJ" src="img/experience/TAJ.svg" />
-                </li>
-                <li>
-                  <img alt="PATH" src="img/experience/PATH_COMMUNITY.svg" />
-                </li>
-                <li>
-                  <img alt="VISTARA" src="img/experience/VISTARA.svg" />
-                </li>
-                <li>
-                  <img alt="BMW" src="img/experience/BMW.png" />
-                </li>
-                <li>
-                  <img alt="Oberoi" src="img/experience/Oberoi.svg" />
-                </li>
-                <li>
-                  <img alt="MMT" src="img/experience/MAKE_MY_TRIP.png" />
-                </li>
-                <li>
-                  <img alt="IIFL" src="img/experience/IIFL.svg" />
-                </li>
-                <li>
-                  <img alt="Tata" src="img/experience/TATA_CLIQ.svg" />
-                </li>
-                <li>
-                  <img alt="Yes Bank" src="img/experience/YES_BANK.png" />
-                </li>
-                <li>
-                  <img alt="QUOROM" src="img/experience/QUOROM.png" />
-                </li>
-              </ul>
-            </div>
-          </div>
+        <div class="container" style="display: flex; flex-direction: column; justify-content: center; align-items: center">
+          <h3>Mission Statement</h3>
+          <p>
+            A multidisciplinary organisation that provides value add in the field of payments and digitisation; bespoke premium and luxury experiences; leadership development ; building loyalty, alliances and partnerships in B2B and B2C; sharing best in class Diversity, Equity & Inclusion practices.
+          </p>
+          <iframe
+          src="https://www.youtube.com/embed/Awuo1qblWcc?rel=0"
+          title="YouTube video player"
+          allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen>
+          </iframe>
         </div>
       </section>
       <a id="expertise" class="in-page-link"></a>
@@ -304,15 +255,68 @@
           <a href="https://www.facebook.com/719808695/posts/pfbid02yf9Js9rgvpuJqPn5J4ZDQBGJ4RXVvrr2JMi8UyGMxGHp3BAGG1huXgKPfLo2ek7pl/?d=w&mibextid=kdkkhi">An Evening on the Ramp</a>
         </div>
       </section>
-      <a id="company" class="in-page-link"></a>
+      <a id="workedwith" class="in-page-link"></a>
       <section class="bg-secondary">
-        <div class="container" style="display: flex; justify-content: center; align-items: center">
-          <iframe
-          src="https://www.youtube.com/embed/Awuo1qblWcc?rel=0"
-          title="YouTube video player"
-          allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen>
-          </iframe>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-12 text-center">
+              <h4 class="uppercase mb64 mb-xs-40">WORKED / PARTNERED WITH</h4>
+            </div>
+          </div>
+          <div class="row">
+            <div class="logo-carousel">
+              <ul class="slides">
+                <li>
+                  <img alt="RELIANCE RETAIL" src="img/experience/RELIANCE_RETAIL.svg" />
+                </li>
+                <li>
+                  <img alt="AXP" src="img/experience/AXP.svg" />
+                </li>
+                <li>
+                  <img alt="EY" src="img/experience/EY.svg" />
+                </li>
+                <li>
+                  <img alt="DLF" src="img/experience/DLF.svg" />
+                </li>
+                <li>
+                  <img alt="CRED" src="img/experience/CRED.svg" />
+                </li>
+                <li>
+                  <img alt="Visa" src="img/experience/VISA.svg" />
+                </li>
+                <li>
+                  <img alt="TAJ" src="img/experience/TAJ.svg" />
+                </li>
+                <li>
+                  <img alt="PATH" src="img/experience/PATH_COMMUNITY.svg" />
+                </li>
+                <li>
+                  <img alt="VISTARA" src="img/experience/VISTARA.svg" />
+                </li>
+                <li>
+                  <img alt="BMW" src="img/experience/BMW.png" />
+                </li>
+                <li>
+                  <img alt="Oberoi" src="img/experience/Oberoi.svg" />
+                </li>
+                <li>
+                  <img alt="MMT" src="img/experience/MAKE_MY_TRIP.png" />
+                </li>
+                <li>
+                  <img alt="IIFL" src="img/experience/IIFL.svg" />
+                </li>
+                <li>
+                  <img alt="Tata" src="img/experience/TATA_CLIQ.svg" />
+                </li>
+                <li>
+                  <img alt="Yes Bank" src="img/experience/YES_BANK.png" />
+                </li>
+                <li>
+                  <img alt="QUOROM" src="img/experience/QUOROM.png" />
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </section>
       <a id="aboutus" class="in-page-link"></a>
