--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
             <div class="col-sm-12 text-center">
               <img alt="logo" class="image" src="img/logo.svg" height="300" />
               <h3 class="mb16">Advisory Services</h3>
+              <h3>
+                Manoj Adlakha, CardIT Founder, Ex SVP & Head International Marketing, American Express, VISA, YES Bank, EY
+              </h3>
             </div>
           </div>
         </div>
